feat: end: GetRecentContacts
